<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.romelapj.formregistro.activity.RegistroActivity">

    <include
        layout="@layout/view_toolbar"
        android:id="@+id/tbRegister"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Registro"
            android:textSize="40sp"
            android:id="@+id/textView2"
            android:textColor="@color/color_accent"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textPersonName"
            android:hint="@string/text_nombre"
            android:textColor="@color/color_text_primary"
            android:textColorHint="@color/color_text_secundary"/>
        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textPersonName"
            android:hint="@string/text_usuario"
            android:textColor="@color/color_text_primary"
            android:textColorHint="@color/color_text_secundary"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:hint="@string/text_password"
            android:textColor="@color/color_text_primary"
            android:textColorHint="@color/color_text_secundary"/>


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/registro"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:background="@color/color_accent"
            android:onClick="onRegitrarUsuario"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:id="@+id/tvErrorRegistro"
            android:textColor="@color/color_primary_dark"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>




</LinearLayout>
